# agentic-gpt-eda

./: .dockerignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
agents/: __init__.py  base.py  executor.py  orchestrator.py  planner.py  reason.py
tests/agents/: test_base_parsing.py  test_executor_tool_calls.py  test_orchestrator.py
tools/: __init__.py  common_tools.py  exploratory_tools.py
