[project]
name = "agentic-eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.28",
    "langflow>=1.8.3",
    "langgraph>=1.0.1",
    "langsmith>=0.7.22",
    "numpy>=1.26.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "pytest>=8.3.0",
    "scikit-learn>=1.5.0",
    "streamlit>=1.41.0",
]
